Fixed small frag_col margin layout breaking issue in firefox

--- a/src/civicboom/public/styles/web/_frags.scss
+++ b/src/civicboom/public/styles/web/_frags.scss
@@ -95,7 +95,7 @@
   	}
   	
   	.frag_left_col {
-  	    margin: 0 1em 0 1em;
+  	    margin: 0 0.9em;
   	    float: left;
   	    width: 46%;
   	}
